fix overlap

--- a/frontend/src/Components/CommunityProjects/Projects.css
+++ b/frontend/src/Components/CommunityProjects/Projects.css
@@ -5,7 +5,7 @@
 }
 
 .posts {
-  margin-top: 15em;
+  margin-top: 2em;
   max-width: 90%;
 }
 
@@ -15,17 +15,13 @@
 }
 
 .left-floating-description {
-  position: absolute;
   max-width: 90%;
-  top: 9em;
   left: 3em;
 }
 
 .collaborators {
-  position: absolute;
+  margin-top: 2em;
   max-width: 75%;
-  top: 12em;
   left: 3em;
-  z-index: 1000;
 }
 
